# cpp23m

./: .gitignore  README.md
02.EnvironmentSetup/: 03.Windows_setup.md  04.Linux_setup.md  05.Mac_setup.md  06.Docker_setup.md
02.EnvironmentSetup/01.Project_template_modules/: main.cpp  utilities.ixx
02.EnvironmentSetup/02.Project_template_headers/: main.cpp
03.FirstSteps/: 05.BuildingWithCMakeManually.md  06.BuildingWithCMakePresets.md
03.FirstSteps/02.FirstCppProgramBasics/: CMakeLists.txt  CMakePresets.json  main.cpp  utilities.h  utilities.ixx
03.FirstSteps/03.CppProgramExecutionModel/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
03.FirstSteps/04.GUIChallenge/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
04.VariablesAndDatatypesAndOperations/01.Variables_data_types_/: main.cpp  utilities.cpp  utilities.h  utilities.ixx
04.VariablesAndDatatypesAndOperations/02.Integer_modifiers_characters_text_auto_/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h  utilities.ixx
04.VariablesAndDatatypesAndOperations/03.Operations_math_functions_weird_integers_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
04.VariablesAndDatatypesAndOperations/04.Bitwise_operators_/: main.cpp  utilities.h  utilities.ixx  vcpkg.json
04.VariablesAndDatatypesAndOperations/05.Bitwise_operator_examples_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
04.VariablesAndDatatypesAndOperations/06.Challenge_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
05.StreamsAndFormattingLiteralsConstants/01.Input_output_streams_and_formatting_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
05.StreamsAndFormattingLiteralsConstants/02.Format_library_/: main.cpp  utilities.h  utilities.ixx
05.StreamsAndFormattingLiteralsConstants/03.Literals_and_constants_/: main.cpp  utilities.h  utilities.ixx
05.StreamsAndFormattingLiteralsConstants/04.Challenge/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
06.FlowControl/01.If_switch_ternary_operator_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
06.FlowControl/02.Loops_/: main.cpp  utilities.h  utilities.ixx
06.FlowControl/03.Challenge_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
07.Sequences/01.Std_array_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
07.Sequences/02.Std_vector_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
07.Sequences/03.Std_string_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
07.Sequences/04.Built_in_array_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
07.Sequences/05.Random_numbers_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
07.Sequences/06.Fortune_tellter_/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
07.Sequences/07.Challenge/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
08.Pointers_dynamic_memory_arrays/01.Pointers/: CMakeLists.txt  CMakePresets.json  main.cpp  pointers_1.h  pointers_1.ixx  pointers_2.h  pointers_2.ixx  pointers_3.h  pointers_3.ixx  pointers_4.h  pointers_4.ixx  utilities.h  utilities.ixx
08.Pointers_dynamic_memory_arrays/02.Dynamic_memory_allocation/: CMakeLists.txt  dynamic_memory_allocation.h  dynamic_memory_allocation_1.ixx  main.cpp  utilities.h  utilities.ixx
08.Pointers_dynamic_memory_arrays/03.SmartPointers/: CMakeLists.txt  main.cpp  shared_pointers.h  shared_pointers.ixx  unique_pointers.h  unique_pointers.ixx  utilities.h  utilities.ixx
08.Pointers_dynamic_memory_arrays/04.References/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
08.Pointers_dynamic_memory_arrays/05.Challenge/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
08.Pointers_dynamic_memory_arrays/06.Challenge2/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx  vcpkg.json
09.Characters_and_strings/01.Characters_and_strings/: CMakeLists.txt  handling_c_strings.h  handling_c_strings.ixx  handling_characters.h  handling_characters.ixx  handling_std_strings.h  handling_std_strings.ixx  main.cpp  string_literals.h  string_literals.ixx  string_views.h  string_views.ixx  utilities.h  utilities.ixx
09.Characters_and_strings/02.Challenge/: challenges.md
09.Characters_and_strings/02.Challenges/: CMakeLists.txt  challenges.md  main.cpp  utilities.h  utilities.ixx
09.Characters_and_strings/03.Challenge_ftxui_palindrome/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
10.Functions/01.Function_basics/: CMakeLists.txt  compare.h  compare.ixx  compare_impl.cpp  main.cpp  math.h  (+4 more)
10.Functions/09.Challenge_1/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx
11.FileIO/03.Challenge/: CMakeLists.txt  main.cpp  utilities.h  utilities.ixx  vcpkg.json
12.Custom_types/01.Custom_types_basics/: CMakeLists.txt  ct1.h  ct1.ixx  ct10.h  ct10.ixx  ct11.h  ct11.ixx  ct12.h  ct12.ixx  ct13.h  ct13.ixx  ct14.h  ct14.ixx  ct15.h  ct15.ixx  ct16.h  ct16.ixx  ct17.h  ct17.ixx  ct2.h  ct2.ixx  ct3.cpp  ct3.h  ct3.ixx  ct4.cpp  ct4.h  ct4.ixx  ct5.cpp  ct5.h  ct5.ixx  ct6.cpp  ct6.h  ct6.ixx  ct7.h  ct7.ixx  ct8.h  ct8.ixx  ct9.h  ct9.ixx  main.cpp  (+2 more)
12.Custom_types/03.Move_semantics/: CMakeLists.txt  canvas.cpp  canvas.h  canvas.ixx  main.cpp  move_semantics_01.h  move_semantics_01.ixx  move_semantics_02.h  move_semantics_02.ixx  move_semantics_03.h  move_semantics_03.ixx  pixel.cpp  pixel.h  utilities.h  utilities.ixx
12_1.Tetris_start/: board.ixx  main.cpp  tetromino.ixx  utilities.ixx
12_2Tetris/: CMakeLists.txt  board.ixx  main.cpp  tetromino.ixx  utilities.ixx
13.Project_tetris/01.Tetromino/: CMakeLists.txt  board.h  board.ixx  main.cpp  tetromino.h  tetromino.ixx  utilities.h  utilities.ixx
13.Project_tetris/02.Movement/: CMakeLists.txt  board.h  utilities.h  utilities.ixx
13.Project_tetris/06.Subdirs/: CMakeLists.txt
13.Project_tetris/06.Subdirs/src/: CMakeLists.txt  main.cpp
13.Project_tetris/06.Subdirs/src/board/: board.h  board_entity.h
13.Project_tetris/06.Subdirs/src/game/: game.h  game.ixx  gamestate.h  gamestate.ixx
13.Project_tetris/06.Subdirs/src/pieces/: tetromino.h
13.Project_tetris/06.Subdirs/src/utils/: utilities.h  utilities.ixx
(+128 files in other folders)
